@@ -1,3 +1,9 @@
+Mon May 26 16:43:26 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/interp.rb : Fix restriction on evaluating number of
+	  initializers in a initializer-list to be separated from the
+	  restriction on the array length.
+
 Sat May 24 23:07:23 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/cc1/interp.rb : Revert cancellation of length restriction
